# glsl-compute-shader-sandbox

./: .gitmodules  CMakeLists.txt  README.md
include/css/: quad.h  shader.h  texture.h
include/gcss/: buffer.h  camera.h  framebuffer.h  quad.h  shader.h  texture.h  vertex-array-object.h
sandbox/: CMakeLists.txt
sandbox/hello/: CMakeLists.txt
sandbox/hello/shaders/: hello.comp  render.frag  render.vert
sandbox/hello/src/: main.cpp  renderer.h
sandbox/life-game/: CMakeLists.txt
sandbox/life-game/shaders/: life-game.comp  render.frag  swap-cells.comp  update-cells.comp
sandbox/life-game/src/: main.cpp  renderer.h
sandbox/mandelbrot/: CMakeLists.txt
sandbox/mandelbrot/shaders/: mandelbrot.comp  render.vert
sandbox/mandelbrot/src/: main.cpp  renderer.h
sandbox/n-body/: CMakeLists.txt
sandbox/n-body/shaders/: additive-blend.comp  gaussian-blur.comp  init-particles.comp  render-particles.frag  render-particles.vert  render.frag  render.vert  swap-particles.comp  update-particles.comp
sandbox/n-body/shaders/n-body/: swap-particles.comp  update-particles.comp
sandbox/n-body/shaders/post-process/: extract-bright-color.comp
sandbox/n-body/src/: bloom.h  gaussian-blur.h  main.cpp  particles.h  renderer.h
sandbox/particles/: CMakeLists.txt
sandbox/particles/shaders/: render-particles.frag  render-particles.vert  update-particles.comp
sandbox/particles/src/: main.cpp  particles.h  renderer.h
sandbox/sort/: CMakeLists.txt
sandbox/sort/src/: main.cpp  sorter.h
sandbox/tone-mapping/: CMakeLists.txt
sandbox/tone-mapping/shaders/: render.frag  tone-mapping.comp
sandbox/tone-mapping/src/: main.cpp  renderer.h
